# chocolate-parachain

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  chainspec-br.md  multi.md
.github/dockerfiles/: Dockerfile.collator  Dockerfile.gitpod-base  Dockerfile.relay
.github/workflows/: test-code.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/chocolate/: Cargo.toml
pallets/chocolate/src/: lib.rs  mock.rs  tests.rs
pallets/minting/: Cargo.toml  README.md
pallets/minting/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/users/: Cargo.toml
pallets/users/src/: lib.rs
polkadot-launch/: config.json
primitives/: Cargo.toml
primitives/src/: lib.rs  projects.rs  users.rs
runtime/: Cargo.toml
runtime/src/: asset_config.rs  lib.rs  xcm_config.rs
scripts/: prep-bins.sh  prep-collator.sh  prep-relay.sh  start-collator.sh  start-relay.sh
zombienet/: config.toml
