[package]
authors = ['Kresna SHA888 <https://github.com/SHA888>']
description = 'Substrate FRAME chocolate pallet for defining custom runtime logic.'
edition = '2021'
homepage = ''
license = 'Unlicense'
name = 'pallet-users'
publish = false
repository = 'https://github.com/Chocolate-Project/chocolate-node'
version = '0.1.0'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.132", optional=true }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.24" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }

# Chocolate

chocolate-primitives = {  path="../../primitives",  default-features = false }

[dev-dependencies]

# Substrate
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.24" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'chocolate-primitives/std',
]
try-runtime = ['frame-support/try-runtime']